Fix Playwright installation on Render
- Use 'python -m playwright install chromium' for browser installation
- Add 'python -m playwright install-deps chromium' for system dependencies
- Separate commands help Render properly install Playwright browsers

This fixes the 'Executable doesn't exist' error on Render deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,8 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      playwright install --with-deps chromium
+      python -m playwright install chromium
+      python -m playwright install-deps chromium
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
