--- a/render.yaml
+++ b/render.yaml
@@ -7,13 +7,14 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      python -m playwright install chromium
-      python -m playwright install-deps chromium
+      PLAYWRIGHT_BROWSERS_PATH=$HOME/.cache/ms-playwright playwright install chromium
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/.cache/ms-playwright
       - key: DATABASE_PATH
         value: ./data/audit.db
       - key: PDF_STORAGE_PATH
