--- a/render.yaml
+++ b/render.yaml
@@ -7,15 +7,16 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-      playwright install chromium
-      playwright install-deps chromium
+      python -m playwright install chromium
+      python -m playwright install-deps chromium
+      echo "Verifying Playwright installation..."
+      ls -la $HOME/.cache/ms-playwright/ || echo "Browser cache not found at default location"
+      python -m playwright --version
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
-      - key: PLAYWRIGHT_BROWSERS_PATH
-        value: /opt/render/.cache/ms-playwright
       - key: DATABASE_PATH
         value: ./data/audit.db
       - key: PDF_STORAGE_PATH
