--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: standard  # $7/mo plan with persistent storage and system access
     region: oregon
-    buildCommand: chmod +x build.sh && ./build.sh
+    buildCommand: bash build.sh
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
