--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: standard  # $7/mo plan with persistent storage and system access
     region: oregon
-    buildCommand: bash build.sh
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt && export PLAYWRIGHT_BROWSERS_PATH=/opt/render/project/.browsers && python -m playwright install chromium && python -m playwright install-deps chromium
     startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
