--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,7 @@ services:
     plan: standard  # $7/mo plan with persistent storage and system access
     region: oregon
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    preDeployCommand: python -m playwright install chromium && python -m playwright install-deps chromium
-    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
+    startCommand: python -m playwright install chromium && python -m playwright install-deps chromium && uvicorn app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
